# carmate

./: .cproject  .gitignore  .project  CMakeLists.txt  carmate.sd
infrastructure/: CMakeLists.txt
infrastructure/include/infrastructure/: queue.h
infrastructure/src/: queue.c
src/: CMakeLists.txt
src/carmate/: CMakeLists.txt  carmate.cmake
src/carmate/src/: carmate.c  carmate.h
src/clock/: CMakeLists.txt  clock.cmake
src/clock/src/: clock.c  clock.h
src/gps_reader/: CMakeLists.txt  gps_reader.cmake
src/gps_reader/src/: gps_reader.c  gps_reader.h
src/include/system/: types.h
src/syncer/: CMakeLists.txt  syncer.cmake
src/syncer/src/: syncer.c  syncer.h
src/tracker/: CMakeLists.txt  tracker.cmake
src/tracker/src/: tracker.c  tracker.h
